--- a/src/Utils/Components/MovieBanner/MovieBanner.css
+++ b/src/Utils/Components/MovieBanner/MovieBanner.css
@@ -1,23 +1,31 @@
+
+.carousel-root{
+    max-width: 100% !important;
+}
+.home{
+    max-width: 100vw;
+}
+body{
+    overflow-x: hidden;
+}
 .banner{
     width: 100%;
-    /* min-height: 100vh; */
-    max-height: max-content;
-    position: relative;
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
+    text-align: start !important;
 }
 .banner-color{
     width: 100%;
     /* min-height: 100vh; */
     max-height: max-content;
-    background: linear-gradient(270deg, transparent, rgba(0, 0, 0, 0.833), rgba(0, 0, 0, 0.948) );
-    /* backdrop-filter: blur(.05em); */
+    background: linear-gradient(250deg, transparent, rgba(0, 0, 0, 0.923), rgba(0, 0, 0, 0.948));
+    /* background: rgba(0, 0, 0, 0.33); */
+    /* backdrop-filter: blur(.1em); */
 }
 .banner-content{
-    min-height: 100vh;
-    /* padding-top: 12em !important;
-    padding-bottom: 4em !important; */
-    /* margin-top: 7em; */
+    min-height: 90vh;
+    padding: 5em 0;
 }
 
 .movie-banner-heading{
@@ -30,22 +38,22 @@
 .movie-banner-title{
     color: white;
     font-size: 3.5em;
-    text-overflow: clip;
+    text-overflow: clip !important;
     margin: .6em 0em;
 }
 .rating{
     display: flex;
-    gap: 1.5em;
+    gap: .5em;
     align-items: center;
 }
 .rating .pg{
     border: solid 2px white;
     padding: .3em .8em;
     border-radius: .3em;
-    font-size: .9em;
+    font-size: .6em;
 }.rating span{
     padding: 0em;
-    font-size: 1.2em;
+    font-size: .6em;
 }
 .movie-about{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -63,12 +71,50 @@
 .banner-data{
     margin: .5em 0em!important;
 }
+.banner-cast{
+    display: flex;
+    position: relative;
+    margin-top: 2em;
+    gap: .5em;
+    max-width: 20em;
+    height: 4em;
+}
+.banner-cast-image{
+    width: 5vh !important;
+    /* height: 5vh; */
+    transition: all .3s;
+    font-size: .7em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1em;
+    /* transform: scale(1.2); */
+}
+.banner-cast-image span{
+    text-overflow: ellipsis !important;
+}
+.banner-cast-image img{
+    width: 4vh !important;
+    height: 4vh;
+    border-radius: .4em;
+    transition: all .3s;
+    /* transform: scale(1.2); */
+}
+.banner-cast .banner-cast-image:hover img{
+    transform: scale(1.2);
+    box-shadow: 0em .0em .5em .1em rgb(34, 34, 34);
+    cursor: pointer;
+}
 @media screen and (max-width: 580px) {   
     .banner-content{
         min-height: 100vh !important;
+        padding-top: 5em;
     }
-    /* .banner{
-        min-height: 30em !important;
+    .banner-data{
+        font-size: .7em;
+    }
+    /* .home{
+        max-width: 100vw !important;
     } */
     .movie-banner-title{
         font-size: 2em;
@@ -76,8 +122,15 @@
     .movie-banner-content{
         padding-top: 7em !important;
     }
+    .movie-banner-heading{
+        font-size: .8em;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
 }
 
 @media screen and (max-width: 990px) {
-    
+    .banner-content{
+        min-height: 80vh !important;
+        padding: 5em 0;
+    }
 }
