--- a/src/Utils/Components/Navbar/Navbar.css
+++ b/src/Utils/Components/Navbar/Navbar.css
@@ -12,7 +12,7 @@ img.logo{
 .app-nav{
     margin: 0;
     align-items: center !important; 
-    background-color: rgba(0, 0, 0, 0.078);
+    /* background-color: rgba(0, 0, 0, 0.078); */
     position: fixed;
     width: 100% !important;
     z-index: 99;
