--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -1,11 +1,18 @@
 @import url(fonts.css);
+@import url(animation.css);
 body{
-    /* background-color: rgb(22, 21, 21) !important; */
+    /* background-color: var(--app-color-dark) !important; */
     /* overflow: hidden; */
+    /* background: linear-gradient(200deg, green green); */
+    background: linear-gradient(0deg, rgba(2, 2, 2, 0.934), rgb(0, 0, 0), rgba(0, 0, 0, 0.948));
 }
 :root{
-    --app-hover-color: transparent;
+    /* --app-color-dark: rgba(2, 2, 2, 0.867); */
+    --app-color-dark: rgba(21,20,25,255);
+    --app-color-dark-2: rgba(79, 79, 79, 0.645);
     --app-color: rgb(116,187,4);
+    --app-color-2: rgb(83, 135, 0);
+    --app-gold: gold;
 }
 *{
     box-sizing: border-box;
@@ -47,21 +54,31 @@ p, h1,h2,h3,h4,h5,h6{
 .btn-app-primary{
     background-color: var(--app-color) !important;
     color: white !important;
-    transition: all .5s;
+    transition: all .5s !important;
 }
 .btn-app-primary:hover{
-    background-color: var(--app-hover-color) !important;
-    color: white;
-    border: solid 2px var(--app-color);
+    background-color: var(--app-color-2) !important;
+    color: var(--app-color);
+    /* border: solid 1px var(--app-color); */
 }
 .play-btn{
     width: 10em !important;
-    height: 3.4em;
-    border-radius: .5em !important;
+    height: 3em;
+    border-radius: 100em !important;
+    padding: .6em !important;
+    box-shadow: .1em 1em 2em -1em var(--app-color);
+}
+.play-btn-2{
+    display: flex;
+    align-items: center;
+    font-size: .8em !important;
+    max-width: 10em;
+    border-radius: 0 !important;
 }
 /* width */
 ::-webkit-scrollbar {
     width: .6em;
+    height: .1em;
     background-color: rgba(45, 45, 45, 0.741);
   }
   
@@ -83,13 +100,40 @@ p, h1,h2,h3,h4,h5,h6{
   }
 
 .app-container{
-    padding: 1em 4em !important;
+    padding: 1em 7em 1em 7em !important;
 }
-
+.section-heading{
+    margin: 1em 7em 1em 7em;
+}
+.genres{
+    margin: 1em 0em 0em 0em;
+}
 
 @media screen and (max-width: 580px ) {
     .app-container{
         padding: 1.5em !important;
     }
+
+    .section-heading{
+        margin: 1.5em;
+    }
+
+    .genres{
+        margin: 0em 1em 0em 0em !important;
+    }
     
+}
+
+
+@media screen and (max-width: 990px ) {
+    .app-container{
+        padding: 2em !important;
+        /* padding: 1.5em 0em 3em 1.5em !important; */
+    }
+    .section-heading{
+        margin: 0em 4em 0em 4em;
+    }
+    .genres{
+        margin: 0em 2em 0em 2em;
+    }
 }
