--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -29,6 +29,9 @@ p, h1,h2,h3,h4,h5,h6{
 .hv-100{
     height: 100vh;
 }
+.h-content{
+    height: fit-content !important;
+}
 .bg-app-primary{
     background-color:  #141414 !important;
     /* backdrop-filter: blur(0.625em); */
