--- a/src/Utils/Components/Components.css
+++ b/src/Utils/Components/Components.css
@@ -23,14 +23,14 @@
 }
 img.poster-img{
     width: 100%;
-    height: 80%;
+    height: 100%;
     border-radius: .7em;
     box-shadow: 0em 1em .6em 0em rgba(0, 0, 0, 0.312);
 }
 .poster-card{
-    margin-top: 1.3em;
-    /* height: 30vh;
-    width: 18vw; */
+    /* margin-top: 1.3em; */
+    /* max-height: 20vw;
+    max-width: 10vw; */
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
@@ -38,7 +38,7 @@ img.poster-img{
     padding-top: 1.3em;
     transition: all .3s;
     margin: 0;
-    padding-bottom: 2em;
+    padding-bottom: 1em;
 }
 
 .poster-rating{
