--- a/src/Utils/Components/MovieBanner/MovieBanner.css
+++ b/src/Utils/Components/MovieBanner/MovieBanner.css
@@ -4,6 +4,7 @@
 }
 .home{
     max-width: 100vw;
+    overflow-x: hidden;
 }
 body{
     overflow-x: hidden;
@@ -17,14 +18,14 @@ body{
 }
 .banner-color{
     width: 100%;
-    min-height: 100vh;
+    min-height: 100%;
     max-height: max-content;
     background: linear-gradient(250deg, transparent, rgba(0, 0, 0, 0.923), rgba(0, 0, 0, 0.948));
     /* background: rgba(0, 0, 0, 0.33); */
     /* backdrop-filter: blur(.1em); */
 }
 .banner-content{
-    height: 100vh;
+    height: 80vh;
     /* padding: 5em 0 0 0; */
     /* background-color: green; */
 }
