--- a/src/Pages/MovieDetails/MovieDetails.css
+++ b/src/Pages/MovieDetails/MovieDetails.css
@@ -10,7 +10,7 @@
     min-height: 30em;
     min-width: 20em;
     padding: 1em;
-    background: linear-gradient(180deg, transparent, rgba(0, 0, 0, 0.953));
+    background: linear-gradient(180deg, transparent, rgba(0, 0, 0, 0.787), rgba(0, 0, 0, 0.953));
     display: flex;
     flex-direction: column;
     justify-content: end;
